Fix too wide post text overlapping sticky board info box

--- a/app/assets/stylesheets/discussion_summary_listing.css
+++ b/app/assets/stylesheets/discussion_summary_listing.css
@@ -5,3 +5,7 @@
 .vellip {
     font-size: 1.3rem;
 }
+
+.discussion-listing-replies .post-text {
+    max-width: 180px;
+}
